fix wmf selection

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
         <p>Use this tool to search for paragraphs related to a certain word in Name of the Wind. The "buffer paragraphs" will grab x paragraphs before & after where the word is for context. It's basically a fancy ctrl+f</p>
         <p for="book-name">Choose a book:</p>
         <select id="book_name_selector">
+            <option value="blank"></option>
             <option value="name_of_the_wind">Name Of The Wind</option>
             <option value="wise_mans_fear">Wise Man's Fear</option>
         </select>
